Pcl2Parser.cpp

#include "wci/intermediate/TypeSpec.h"
using namespace wci::intermediate;


// Generated from Pcl2.g4 by ANTLR 4.7.1


#include "Pcl2Visitor.h"

#include "Pcl2Parser.h"


using namespace antlrcpp;
using namespace antlr4;

Pcl2Parser::Pcl2Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

Pcl2Parser::~Pcl2Parser() {
  delete _interpreter;
}

std::string Pcl2Parser::getGrammarFileName() const {
  return "Pcl2.g4";
}

const std::vector<std::string>& Pcl2Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& Pcl2Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

Pcl2Parser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<Pcl2Parser::StatContext *> Pcl2Parser::ProgContext::stat() {
  return getRuleContexts<Pcl2Parser::StatContext>();
}

Pcl2Parser::StatContext* Pcl2Parser::ProgContext::stat(size_t i) {
  return getRuleContext<Pcl2Parser::StatContext>(i);
}


size_t Pcl2Parser::ProgContext::getRuleIndex() const {
  return Pcl2Parser::RuleProg;
}

antlrcpp::Any Pcl2Parser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::ProgContext* Pcl2Parser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, Pcl2Parser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(34);
      stat();
      setState(37); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << Pcl2Parser::INT)
      | (1ULL << Pcl2Parser::CHAR)
      | (1ULL << Pcl2Parser::IF)
      | (1ULL << Pcl2Parser::WHILE)
      | (1ULL << Pcl2Parser::PRINT)
      | (1ULL << Pcl2Parser::ID)
      | (1ULL << Pcl2Parser::NEWLINE)
      | (1ULL << Pcl2Parser::LPAREN))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

Pcl2Parser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Pcl2Parser::AssignContext* Pcl2Parser::StatContext::assign() {
  return getRuleContext<Pcl2Parser::AssignContext>(0);
}

tree::TerminalNode* Pcl2Parser::StatContext::NEWLINE() {
  return getToken(Pcl2Parser::NEWLINE, 0);
}

Pcl2Parser::ExprContext* Pcl2Parser::StatContext::expr() {
  return getRuleContext<Pcl2Parser::ExprContext>(0);
}

Pcl2Parser::DeclarationContext* Pcl2Parser::StatContext::declaration() {
  return getRuleContext<Pcl2Parser::DeclarationContext>(0);
}

Pcl2Parser::If_stmContext* Pcl2Parser::StatContext::if_stm() {
  return getRuleContext<Pcl2Parser::If_stmContext>(0);
}

Pcl2Parser::While_stmContext* Pcl2Parser::StatContext::while_stm() {
  return getRuleContext<Pcl2Parser::While_stmContext>(0);
}

Pcl2Parser::PrintContext* Pcl2Parser::StatContext::print() {
  return getRuleContext<Pcl2Parser::PrintContext>(0);
}

Pcl2Parser::CallContext* Pcl2Parser::StatContext::call() {
  return getRuleContext<Pcl2Parser::CallContext>(0);
}


size_t Pcl2Parser::StatContext::getRuleIndex() const {
  return Pcl2Parser::RuleStat;
}

antlrcpp::Any Pcl2Parser::StatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitStat(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::StatContext* Pcl2Parser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 2, Pcl2Parser::RuleStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(61);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(39);
      assign();
      setState(40);
      match(Pcl2Parser::NEWLINE);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(42);
      expr(0);
      setState(43);
      match(Pcl2Parser::NEWLINE);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(45);
      declaration();
      setState(46);
      match(Pcl2Parser::NEWLINE);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(48);
      if_stm();
      setState(49);
      match(Pcl2Parser::NEWLINE);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(51);
      while_stm();
      setState(52);
      match(Pcl2Parser::NEWLINE);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(54);
      print();
      setState(55);
      match(Pcl2Parser::NEWLINE);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(57);
      call();
      setState(58);
      match(Pcl2Parser::NEWLINE);
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(60);
      match(Pcl2Parser::NEWLINE);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CallContext ------------------------------------------------------------------

Pcl2Parser::CallContext::CallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Pcl2Parser::CallContext::ID() {
  return getToken(Pcl2Parser::ID, 0);
}

Pcl2Parser::ExprContext* Pcl2Parser::CallContext::expr() {
  return getRuleContext<Pcl2Parser::ExprContext>(0);
}


size_t Pcl2Parser::CallContext::getRuleIndex() const {
  return Pcl2Parser::RuleCall;
}

antlrcpp::Any Pcl2Parser::CallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitCall(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::CallContext* Pcl2Parser::call() {
  CallContext *_localctx = _tracker.createInstance<CallContext>(_ctx, getState());
  enterRule(_localctx, 4, Pcl2Parser::RuleCall);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(Pcl2Parser::ID);
    setState(64);
    match(Pcl2Parser::LPAREN);
    setState(65);
    expr(0);
    setState(66);
    match(Pcl2Parser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_stmContext ------------------------------------------------------------------

Pcl2Parser::If_stmContext::If_stmContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Pcl2Parser::If_stmContext::IF() {
  return getToken(Pcl2Parser::IF, 0);
}

Pcl2Parser::ExprContext* Pcl2Parser::If_stmContext::expr() {
  return getRuleContext<Pcl2Parser::ExprContext>(0);
}

Pcl2Parser::StatContext* Pcl2Parser::If_stmContext::stat() {
  return getRuleContext<Pcl2Parser::StatContext>(0);
}


size_t Pcl2Parser::If_stmContext::getRuleIndex() const {
  return Pcl2Parser::RuleIf_stm;
}

antlrcpp::Any Pcl2Parser::If_stmContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitIf_stm(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::If_stmContext* Pcl2Parser::if_stm() {
  If_stmContext *_localctx = _tracker.createInstance<If_stmContext>(_ctx, getState());
  enterRule(_localctx, 6, Pcl2Parser::RuleIf_stm);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(Pcl2Parser::IF);
    setState(69);
    match(Pcl2Parser::LPAREN);
    setState(70);
    expr(0);
    setState(71);
    match(Pcl2Parser::RPAREN);
    setState(72);
    stat();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- While_stmContext ------------------------------------------------------------------

Pcl2Parser::While_stmContext::While_stmContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Pcl2Parser::While_stmContext::WHILE() {
  return getToken(Pcl2Parser::WHILE, 0);
}

Pcl2Parser::ExprContext* Pcl2Parser::While_stmContext::expr() {
  return getRuleContext<Pcl2Parser::ExprContext>(0);
}

Pcl2Parser::StatContext* Pcl2Parser::While_stmContext::stat() {
  return getRuleContext<Pcl2Parser::StatContext>(0);
}


size_t Pcl2Parser::While_stmContext::getRuleIndex() const {
  return Pcl2Parser::RuleWhile_stm;
}

antlrcpp::Any Pcl2Parser::While_stmContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitWhile_stm(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::While_stmContext* Pcl2Parser::while_stm() {
  While_stmContext *_localctx = _tracker.createInstance<While_stmContext>(_ctx, getState());
  enterRule(_localctx, 8, Pcl2Parser::RuleWhile_stm);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(Pcl2Parser::WHILE);
    setState(75);
    match(Pcl2Parser::LPAREN);
    setState(76);
    expr(0);
    setState(77);
    match(Pcl2Parser::RPAREN);
    setState(78);
    stat();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintContext ------------------------------------------------------------------

Pcl2Parser::PrintContext::PrintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Pcl2Parser::PrintContext::PRINT() {
  return getToken(Pcl2Parser::PRINT, 0);
}

tree::TerminalNode* Pcl2Parser::PrintContext::INSERTION() {
  return getToken(Pcl2Parser::INSERTION, 0);
}

Pcl2Parser::OutContext* Pcl2Parser::PrintContext::out() {
  return getRuleContext<Pcl2Parser::OutContext>(0);
}


size_t Pcl2Parser::PrintContext::getRuleIndex() const {
  return Pcl2Parser::RulePrint;
}

antlrcpp::Any Pcl2Parser::PrintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitPrint(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::PrintContext* Pcl2Parser::print() {
  PrintContext *_localctx = _tracker.createInstance<PrintContext>(_ctx, getState());
  enterRule(_localctx, 10, Pcl2Parser::RulePrint);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    match(Pcl2Parser::PRINT);
    setState(81);
    match(Pcl2Parser::INSERTION);
    setState(82);
    out();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OutContext ------------------------------------------------------------------

Pcl2Parser::OutContext::OutContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Pcl2Parser::Variable_idContext* Pcl2Parser::OutContext::variable_id() {
  return getRuleContext<Pcl2Parser::Variable_idContext>(0);
}

tree::TerminalNode* Pcl2Parser::OutContext::STRING() {
  return getToken(Pcl2Parser::STRING, 0);
}


size_t Pcl2Parser::OutContext::getRuleIndex() const {
  return Pcl2Parser::RuleOut;
}

antlrcpp::Any Pcl2Parser::OutContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitOut(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::OutContext* Pcl2Parser::out() {
  OutContext *_localctx = _tracker.createInstance<OutContext>(_ctx, getState());
  enterRule(_localctx, 12, Pcl2Parser::RuleOut);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(86);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Pcl2Parser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(84);
        variable_id();
        break;
      }

      case Pcl2Parser::STRING: {
        enterOuterAlt(_localctx, 2);
        setState(85);
        match(Pcl2Parser::STRING);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

Pcl2Parser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Pcl2Parser::DeclContext* Pcl2Parser::DeclarationContext::decl() {
  return getRuleContext<Pcl2Parser::DeclContext>(0);
}

Pcl2Parser::FuncContext* Pcl2Parser::DeclarationContext::func() {
  return getRuleContext<Pcl2Parser::FuncContext>(0);
}


size_t Pcl2Parser::DeclarationContext::getRuleIndex() const {
  return Pcl2Parser::RuleDeclaration;
}

antlrcpp::Any Pcl2Parser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::DeclarationContext* Pcl2Parser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 14, Pcl2Parser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(90);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(88);
      decl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(89);
      func();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Return_typeContext ------------------------------------------------------------------

Pcl2Parser::Return_typeContext::Return_typeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Pcl2Parser::Return_typeContext::ID() {
  return getToken(Pcl2Parser::ID, 0);
}


size_t Pcl2Parser::Return_typeContext::getRuleIndex() const {
  return Pcl2Parser::RuleReturn_type;
}

antlrcpp::Any Pcl2Parser::Return_typeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitReturn_type(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::Return_typeContext* Pcl2Parser::return_type() {
  Return_typeContext *_localctx = _tracker.createInstance<Return_typeContext>(_ctx, getState());
  enterRule(_localctx, 16, Pcl2Parser::RuleReturn_type);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(Pcl2Parser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturningContext ------------------------------------------------------------------

Pcl2Parser::ReturningContext::ReturningContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Pcl2Parser::ReturningContext::ID() {
  return getToken(Pcl2Parser::ID, 0);
}


size_t Pcl2Parser::ReturningContext::getRuleIndex() const {
  return Pcl2Parser::RuleReturning;
}

antlrcpp::Any Pcl2Parser::ReturningContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitReturning(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::ReturningContext* Pcl2Parser::returning() {
  ReturningContext *_localctx = _tracker.createInstance<ReturningContext>(_ctx, getState());
  enterRule(_localctx, 18, Pcl2Parser::RuleReturning);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(Pcl2Parser::T__0);
    setState(95);
    match(Pcl2Parser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncContext ------------------------------------------------------------------

Pcl2Parser::FuncContext::FuncContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Pcl2Parser::Return_typeContext* Pcl2Parser::FuncContext::return_type() {
  return getRuleContext<Pcl2Parser::Return_typeContext>(0);
}

tree::TerminalNode* Pcl2Parser::FuncContext::ID() {
  return getToken(Pcl2Parser::ID, 0);
}

Pcl2Parser::AssignContext* Pcl2Parser::FuncContext::assign() {
  return getRuleContext<Pcl2Parser::AssignContext>(0);
}

Pcl2Parser::ReturningContext* Pcl2Parser::FuncContext::returning() {
  return getRuleContext<Pcl2Parser::ReturningContext>(0);
}

std::vector<Pcl2Parser::StatContext *> Pcl2Parser::FuncContext::stat() {
  return getRuleContexts<Pcl2Parser::StatContext>();
}

Pcl2Parser::StatContext* Pcl2Parser::FuncContext::stat(size_t i) {
  return getRuleContext<Pcl2Parser::StatContext>(i);
}


size_t Pcl2Parser::FuncContext::getRuleIndex() const {
  return Pcl2Parser::RuleFunc;
}

antlrcpp::Any Pcl2Parser::FuncContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitFunc(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::FuncContext* Pcl2Parser::func() {
  FuncContext *_localctx = _tracker.createInstance<FuncContext>(_ctx, getState());
  enterRule(_localctx, 20, Pcl2Parser::RuleFunc);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    return_type();
    setState(98);
    match(Pcl2Parser::T__1);
    setState(99);
    match(Pcl2Parser::ID);
    setState(100);
    match(Pcl2Parser::LPAREN);
    setState(101);
    assign();
    setState(102);
    match(Pcl2Parser::RPAREN);
    setState(103);
    match(Pcl2Parser::T__2);
    setState(105); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(104);
      stat();
      setState(107); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << Pcl2Parser::INT)
      | (1ULL << Pcl2Parser::CHAR)
      | (1ULL << Pcl2Parser::IF)
      | (1ULL << Pcl2Parser::WHILE)
      | (1ULL << Pcl2Parser::PRINT)
      | (1ULL << Pcl2Parser::ID)
      | (1ULL << Pcl2Parser::NEWLINE)
      | (1ULL << Pcl2Parser::LPAREN))) != 0));
    setState(109);
    match(Pcl2Parser::T__3);
    setState(110);
    returning();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

Pcl2Parser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Pcl2Parser::Type_idContext* Pcl2Parser::DeclContext::type_id() {
  return getRuleContext<Pcl2Parser::Type_idContext>(0);
}

Pcl2Parser::Variable_listContext* Pcl2Parser::DeclContext::variable_list() {
  return getRuleContext<Pcl2Parser::Variable_listContext>(0);
}


size_t Pcl2Parser::DeclContext::getRuleIndex() const {
  return Pcl2Parser::RuleDecl;
}

antlrcpp::Any Pcl2Parser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::DeclContext* Pcl2Parser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 22, Pcl2Parser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    type_id();
    setState(113);
    variable_list();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Variable_listContext ------------------------------------------------------------------

Pcl2Parser::Variable_listContext::Variable_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Pcl2Parser::Variable_idContext* Pcl2Parser::Variable_listContext::variable_id() {
  return getRuleContext<Pcl2Parser::Variable_idContext>(0);
}


size_t Pcl2Parser::Variable_listContext::getRuleIndex() const {
  return Pcl2Parser::RuleVariable_list;
}

antlrcpp::Any Pcl2Parser::Variable_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitVariable_list(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::Variable_listContext* Pcl2Parser::variable_list() {
  Variable_listContext *_localctx = _tracker.createInstance<Variable_listContext>(_ctx, getState());
  enterRule(_localctx, 24, Pcl2Parser::RuleVariable_list);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    variable_id();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Variable_idContext ------------------------------------------------------------------

Pcl2Parser::Variable_idContext::Variable_idContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Pcl2Parser::Variable_idContext::ID() {
  return getToken(Pcl2Parser::ID, 0);
}


size_t Pcl2Parser::Variable_idContext::getRuleIndex() const {
  return Pcl2Parser::RuleVariable_id;
}

antlrcpp::Any Pcl2Parser::Variable_idContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitVariable_id(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::Variable_idContext* Pcl2Parser::variable_id() {
  Variable_idContext *_localctx = _tracker.createInstance<Variable_idContext>(_ctx, getState());
  enterRule(_localctx, 26, Pcl2Parser::RuleVariable_id);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    match(Pcl2Parser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Type_idContext ------------------------------------------------------------------

Pcl2Parser::Type_idContext::Type_idContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Pcl2Parser::Type_idContext::ID() {
  return getToken(Pcl2Parser::ID, 0);
}


size_t Pcl2Parser::Type_idContext::getRuleIndex() const {
  return Pcl2Parser::RuleType_id;
}

antlrcpp::Any Pcl2Parser::Type_idContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitType_id(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::Type_idContext* Pcl2Parser::type_id() {
  Type_idContext *_localctx = _tracker.createInstance<Type_idContext>(_ctx, getState());
  enterRule(_localctx, 28, Pcl2Parser::RuleType_id);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    match(Pcl2Parser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignContext ------------------------------------------------------------------

Pcl2Parser::AssignContext::AssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Pcl2Parser::Variable_idContext* Pcl2Parser::AssignContext::variable_id() {
  return getRuleContext<Pcl2Parser::Variable_idContext>(0);
}

Pcl2Parser::ExprContext* Pcl2Parser::AssignContext::expr() {
  return getRuleContext<Pcl2Parser::ExprContext>(0);
}

Pcl2Parser::DeclarationContext* Pcl2Parser::AssignContext::declaration() {
  return getRuleContext<Pcl2Parser::DeclarationContext>(0);
}


size_t Pcl2Parser::AssignContext::getRuleIndex() const {
  return Pcl2Parser::RuleAssign;
}

antlrcpp::Any Pcl2Parser::AssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Pcl2Visitor*>(visitor))
    return parserVisitor->visitAssign(this);
  else
    return visitor->visitChildren(this);
}

Pcl2Parser::AssignContext* Pcl2Parser::assign() {
  AssignContext *_localctx = _tracker.createInstance<AssignContext>(_ctx, getState());
  enterRule(_localctx, 30, Pcl2Parser::RuleAssign);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(129);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(121);
      variable_id();
      setState(122);
      match(Pcl2Parser::T__4);
      setState(123);
      expr(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(125);
      declaration();
      setState(126);
      match(Pcl2Parser::T__4);
      setState(127);
      expr(0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

Pcl2Parser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

